--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -143,10 +143,14 @@ $base0f: #ff5370 !default;
 $small: 600px !default;
 $medium: 768px !default;
 $medium-wide: 900px !default;
-$large: 1024px !default;
-$x-large: 1280px !default;
+$large:  1200px !default;
+$x-large: 1480px !default;
 $max-width: $x-large !default;
 
+/*
+$large: 1024px !default;
+$x-large: 1028px !default;
+*/
 /*
    Grid
    ========================================================================== */
