--- a/_sass/minimal-mistakes/skins/_contrast.scss
+++ b/_sass/minimal-mistakes/skins/_contrast.scss
@@ -7,7 +7,7 @@ $text-color: #000 !default;
 $muted-text-color: $text-color !default;
 $primary-color: #ff0000 !default;
 $border-color: #d6001c !default;
-$footer-background-color: #000 !default;
+$footer-background-color: #54585a !default;
 $link-color: #2b517f !default;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: $text-color !default;
